add:table todos

--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "test": "test"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "@prisma/client": "^6.2.1",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "prisma": "^6.2.1"
   }
 }
